@@ -6,11 +6,13 @@ import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.exception.ValidationException;
 import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.service.director.DirectorService;
+import ru.yandex.practicum.filmorate.service.genre.GenreService;
 import ru.yandex.practicum.filmorate.service.user.UserService;
 import ru.yandex.practicum.filmorate.storage.film.FilmStorage;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -20,6 +22,7 @@ public class FilmDbServiceImpl implements FilmService {
     private final FilmStorage filmDbStorage;
     private final UserService userDbServiceImpl;
     private final DirectorService directorService;
+    private final GenreService genreService;
     private static final int DEFAULT_AMOUNT_POPULAR_FILMS = 10;
 
     public List<Film> getAllFilms() {
@@ -30,14 +33,17 @@ public class FilmDbServiceImpl implements FilmService {
         return filmDbStorage.getFilmById(id);
     }
 
-    public List<Film> getPopularFilms(Integer count) {
+    public List<Film> getPopularFilms(Integer count, Integer genreId, Integer year) {
         log.info("Get popular films");
         Optional<Integer> optionalCount = Optional.ofNullable(count);
-        return filmDbStorage.getAllFilms().stream()
-                .filter(film -> film.getLikes() != null)
+        return getAllFilms()
+                .stream()
+                //.filter(film -> !film.getLikes().isEmpty())
                 .sorted((film1, film2) -> Integer.compare(film2.getLikes().size(), film1.getLikes().size()))
+                .filter(film -> genreId == null || film.getGenres().contains(genreService.getGenreById(genreId)))
+                .filter(film -> year == null || film.getReleaseDate().getYear() == year)
                 .limit(optionalCount.orElse(DEFAULT_AMOUNT_POPULAR_FILMS))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
